remove references to old domain

--- a/PROJECTMuzzy.html
+++ b/PROJECTMuzzy.html
@@ -110,8 +110,8 @@ function preloadImages() {
 									<td colspan="4"><p>The above video portal for Early Advantage demonstrates the power of Web Flicks to increase sales. The<br />
 									  Early Advantage 
 									  <a href="http://www.early-advantage.com/video/videotestimonials.aspx">site</a> allows customers, teachers and language experts to talk about successes with prospective  customers. Early Advantage hired us to interview  customers and language experts such as Dr. Rassias from Dartmouth. We then edited all the videos down to short Web Flicks,  allowing   Early Advantage to see a 10% increase in sales the first week the site was up. Every brand can benefit from Web Flicks that allow customers to talk to prospects. </p>
-								      <p>To see the restoration work we did on the  Broadcast Muzzy Master <a href="http://www.brandapplause.com/PROJECTMuzzyReMaster.html">click here</a>. <br />
-						            To see Pulitzer prize winner Debby Applegate at Amherst <a href="http://www.brandapplause.com/PROJECTMuzzyApplegate.html">click here</a>. </p></td>
+								      <p>To see the restoration work we did on the  Broadcast Muzzy Master <a href="/PROJECTMuzzyReMaster.html">click here</a>. <br />
+						            To see Pulitzer prize winner Debby Applegate at Amherst <a href="/PROJECTMuzzyApplegate.html">click here</a>. </p></td>
 								</tr>
 							</table>
 						</div>
