--- a/PROJECT_MP4_ACE_Example.html
+++ b/PROJECT_MP4_ACE_Example.html
@@ -88,8 +88,8 @@ function preloadImages() {
 
 
 
-<video id="example_video_1" class="video-js vjs-default-skin" controls width="960" height="540" poster="http://www.brandapplause.com/Images/GenericVideo.png" preload="auto" data-setup="{}">
-  <source type="video/mp4" src="http://www.brandapplause.com/video/EditWorldview2013v10WithTM.mp4">
+<video id="example_video_1" class="video-js vjs-default-skin" controls width="960" height="540" poster="/Images/GenericVideo.png" preload="auto" data-setup="{}">
+  <source type="video/mp4" src="/video/EditWorldview2013v10WithTM.mp4">
 </video>
 
 
