--- a/CL.html
+++ b/CL.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -53,11 +53,11 @@ function preloadImages() {
 					<p>-----------------------</p>
 					<h1><a name="Anchor_contact2"></a>How to Get Here</h1>
 					<p>If  you get off Interstate 95 in Connecticut at Ext 5 (both from the North of the South) you come to a light at the MacDonalds. Take a right on to Route 1 and go for 1 mile. At a stop light turn Left onto Havemeyer Lane. Go three streets and turn left onto Halsey. Follow Halsey down through a stop sign until to see 65 Halsey Drive on the Right.</p>
-					<p><a href="http://maps.google.com/maps?f=q&hl=en&geocode=&q=65+Halsey+Dr,+Old+Greenwich,+CT+06870&sll=41.03014,-73.56724&sspn=0.074978,0.14883&ie=UTF8&z=16&iwloc=addr&om=1" target="_blank">get directions</a></p>
+					<p><a href="https://maps.google.com/maps?f=q&hl=en&geocode=&q=65+Halsey+Dr,+Old+Greenwich,+CT+06870&sll=41.03014,-73.56724&sspn=0.074978,0.14883&ie=UTF8&z=16&iwloc=addr&om=1" target="_blank">get directions</a></p>
 					<p>-----------------------</p>
 					<h1><a name="Anchor_contact3"></a>Get the Map</h1>
 					<p>Old Greenwich is just 30 minutes from mid-town New York City by car or train and is ideally situated for shoots that pull on New York talent and/or need a country look. The close proximity between our New York and Old Greenwich locations is ideal for projects that need a larger location footprint. </p>
-					<p><a href="http://maps.google.com/maps?f=q&amp;hl=en&amp;geocode=&amp;q=65+Halsey+Dr,+Old+Greenwich,+CT+06870&amp;sll=41.03014,-73.56724&amp;sspn=0.074978,0.14883&amp;ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" target="_blank">get directions</a><a href="http://maps.google.com/maps?client=safari&rls=en&q=yahoo&ie=UTF-8&oe=UTF-8&um=1&sa=N&tab=wl" target="_blank"></a></p>
+					<p><a href="https://maps.google.com/maps?f=q&amp;hl=en&amp;geocode=&amp;q=65+Halsey+Dr,+Old+Greenwich,+CT+06870&amp;sll=41.03014,-73.56724&amp;sspn=0.074978,0.14883&amp;ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" target="_blank">get directions</a><a href="https://maps.google.com/maps?client=safari&rls=en&q=yahoo&ie=UTF-8&oe=UTF-8&um=1&sa=N&tab=wl" target="_blank"></a></p>
 				  <p>-----------------------</p>
 					<h1><a name="Anchor_contact4"></a>Email Our Webmaster</h1>
 					<p>Please contact our webmaster and our staff if you have any questions. </p>
