--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -58,11 +58,11 @@ function MM_swapImage() { //v3.0
 
 	<body onload="preloadImages();MM_preloadImages('Images/SuperBrandColorON.gif','Images/WebcastingButtonON.gif','Images/BroadcastButtonON.gif','Images/CameraButtonON.gif')" bgcolor="#ffa500">
 		<div id="layer1">
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" height="159" width="212">
+<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" height="159" width="212">
 				<param name="movie" value="video/HomePageMoovie.swf" />
 				<param name="quality" value="best" />
 				<param name="play" value="true" />
-				<embed height="159" pluginspage="http://www.macromedia.com/go/getflashplayer" src="video/HomePageMoovie.swf" type="application/x-shockwave-flash" width="212" quality="best" play="true"></embed> 
+				<embed height="159" pluginspage="https://www.macromedia.com/go/getflashplayer" src="video/HomePageMoovie.swf" type="application/x-shockwave-flash" width="212" quality="best" play="true"></embed> 
 			</object></div>
 		<table width="957" border="0" cellspacing="0" cellpadding="0" cool="cool" gridx="10" gridy="10" height="928" showgridx="showgridx" showgridy="showgridy" usegridx="usegridx" usegridy="usegridy">
 			<tr height="2">
