--- a/PROJECTANACONDA.html
+++ b/PROJECTANACONDA.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -70,13 +70,13 @@ function preloadImages() {
 							  </tr>
 								<tr>
 									<td colspan="4"><p align="center">
-									  <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="662" height="321" id="FLVPlayer">
+									  <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="662" height="321" id="FLVPlayer">
                                         <param name="movie" value="FLVPlayer_Progressive.swf" />
                                         <param name="salign" value="lt" />
                                         <param name="quality" value="high" />
                                         <param name="scale" value="noscale" />
                                         <param name="FlashVars" value="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/AnacondaWstill2h768K&autoPlay=false&autoRewind=false" />
-                                        <embed src="FLVPlayer_Progressive.swf" flashvars="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/AnacondaWstill2h768K&autoPlay=false&autoRewind=false" quality="high" scale="noscale" width="662" height="321" name="FLVPlayer" salign="LT" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+                                        <embed src="FLVPlayer_Progressive.swf" flashvars="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/AnacondaWstill2h768K&autoPlay=false&autoRewind=false" quality="high" scale="noscale" width="662" height="321" name="FLVPlayer" salign="LT" type="application/x-shockwave-flash" pluginspage="https://www.macromedia.com/go/getflashplayer" />
                                         </embed>
 									    </embed>
                                         </embed>
