--- a/PROJECTQVC.html
+++ b/PROJECTQVC.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -36,7 +36,7 @@ function MM_CheckFlashVersion(reqVerStr,msg){
   
       if (flashVer < reqVer){
         if (confirm(msg))
-          window.location = "http://www.macromedia.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash";
+          window.location = "https://www.macromedia.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash";
       }
     }
   } 
@@ -81,13 +81,13 @@ function preloadImages() {
 									</td>
 								</tr>
 								<tr height="1">
-									<td rowspan="4" height="421"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="342" height="289" id="FLVPlayer">
+									<td rowspan="4" height="421"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="342" height="289" id="FLVPlayer">
                                       <param name="movie" value="FLVPlayer_Progressive.swf" />
                                       <param name="salign" value="lt" />
                                       <param name="quality" value="high" />
                                       <param name="scale" value="noscale" />
                                       <param name="FlashVars" value="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/QVCSpotflv500K&autoPlay=true&autoRewind=false" />
-                                      <embed src="FLVPlayer_Progressive.swf" flashvars="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/QVCSpotflv500K&autoPlay=true&autoRewind=false" quality="high" scale="noscale" width="342" height="289" name="FLVPlayer" salign="LT" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />                                    
+                                      <embed src="FLVPlayer_Progressive.swf" flashvars="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/QVCSpotflv500K&autoPlay=true&autoRewind=false" quality="high" scale="noscale" width="342" height="289" name="FLVPlayer" salign="LT" type="application/x-shockwave-flash" pluginspage="https://www.macromedia.com/go/getflashplayer" />                                    
 </object></td>
 									<td valign="top" height="18"></td>
 									<td valign="top" height="18"></td>
