--- a/PROJECTTexaco.html
+++ b/PROJECTTexaco.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -53,13 +53,13 @@ function preloadImages() {
 								  </td>
 								</tr>
 								<tr height="80">
-									<td rowspan="3" width="502" height="408"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="502" height="413" id="FLVPlayer">
+									<td rowspan="3" width="502" height="408"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="502" height="413" id="FLVPlayer">
                                       <param name="movie" value="FLVPlayer_Progressive.swf" />
                                       <param name="salign" value="lt" />
                                       <param name="quality" value="high" />
                                       <param name="scale" value="noscale" />
                                       <param name="FlashVars" value="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/TexacoSponsorshipw768K&autoPlay=false&autoRewind=true" />
-                                      <embed src="FLVPlayer_Progressive.swf" flashvars="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/TexacoSponsorshipw768K&autoPlay=false&autoRewind=true" quality="high" scale="noscale" width="502" height="413" name="FLVPlayer" salign="LT" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" /></embed>
+                                      <embed src="FLVPlayer_Progressive.swf" flashvars="&MM_ComponentVersion=1&skinName=Halo_Skin_3&streamName=video/TexacoSponsorshipw768K&autoPlay=false&autoRewind=true" quality="high" scale="noscale" width="502" height="413" name="FLVPlayer" salign="LT" type="application/x-shockwave-flash" pluginspage="https://www.macromedia.com/go/getflashplayer" /></embed>
                                     </object></td>
 									<td valign="top" width="1" height="80"></td>
 									<td valign="top" width="4" height="80"></td>
