--- a/NB.html
+++ b/NB.html
@@ -81,7 +81,7 @@
 		<br />
 		<table width="678" border="0" cellspacing="0" cellpadding="0">
 			<tr height="15">
-				<td rowspan="2" width="150" height="71"><a onmouseover="changeImages('EarlyAdvantageTHUMBsmall4','/images/EarlyAdvantageTHUMBpre.jpg');return true" onmouseout="changeImages('EarlyAdvantageTHUMBsmall4','/images/EarlyAdvantageTHUMBsmall.jpg');return true" href="PROJECTMuzzy.html"><img id="EarlyAdvantageTHUMBsmall4" src="/images/EarlyAdvantageTHUMBsmall.jpg" alt="" name="EarlyAdvantageTHUMBsmall4" width="150" height="100" border="0" /></a></td>
+				<td rowspan="2" width="150" height="71"><a onmouseover="MM_swapImage('EarlyAdvantageTHUMBsmall4','/images/EarlyAdvantageTHUMBpre.jpg')" onmouseout="MM_swapImgRestore('EarlyAdvantageTHUMBsmall4','/images/EarlyAdvantageTHUMBsmall.jpg')" href="PROJECTMuzzy.html"><img id="EarlyAdvantageTHUMBsmall4" src="/images/EarlyAdvantageTHUMBsmall.jpg" alt="" name="EarlyAdvantageTHUMBsmall4" width="150" height="100" border="0" /></a></td>
 				<td rowspan="2" width="15" height="71"></td>
 				<td align="left" valign="middle" width="513" height="15"><b>Early Advantage</b></td>
 			</tr>
@@ -142,27 +142,27 @@
 			<tr>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="changeImages('AButtonWebFlicks','/images/ButtonWebFlicks.gif');return true" onmouseout="changeImages('AButtonWebFlicks','/images/AButtonWebFlicks.gif');return true" href="WebFlicks.html"><img id="AButtonWebFlicks" src="/images/AButtonWebFlicks.gif" alt="" name="AButtonWebFlicks" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonWebFlicks','','/images/ButtonWebFlicks.gif')" onmouseout="MM_swapImgRestore('AButtonWebFlicks','/images/AButtonWebFlicks.gif')" href="WebFlicks.html"><img id="AButtonWebFlicks" src="/images/AButtonWebFlicks.gif" alt="" name="AButtonWebFlicks" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="changeImages('AButtonNationalBC','/images/ButtonNationalBC.jpg');return true" onmouseout="changeImages('AButtonNationalBC','/images/AButtonNationalBC.gif');return true" href="NB.html"><img id="AButtonNationalBC" src="/images/AButtonNationalBC.gif" alt="" name="AButtonNationalBC" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonNationalBC','','/images/ButtonNationalBC.jpg')" onmouseout="MM_swapImgRestore('AButtonNationalBC','/images/AButtonNationalBC.gif')" href="NB.html"><img id="AButtonNationalBC" src="/images/AButtonNationalBC.gif" alt="" name="AButtonNationalBC" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="changeImages('AButtonPhotoS','/images/ButtonPhotoS.gif');return true" onmouseout="changeImages('AButtonPhotoS','/images/AButtonPhotoS.gif');return true" href="PS.html"><img id="AButtonPhotoS" src="/images/AButtonPhotoS.gif" alt="" name="AButtonPhotoS" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonPhotoS','','/images/ButtonPhotoS.gif')" onmouseout="MM_swapImgRestore('AButtonPhotoS','/images/AButtonPhotoS.gif')" href="PS.html"><img id="AButtonPhotoS" src="/images/AButtonPhotoS.gif" alt="" name="AButtonPhotoS" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="106">
 					<div align="center">
-						<a onmouseover="changeImages('AButtonClients','/images/ButtonClients.jpg');return true" onmouseout="changeImages('AButtonClients','/images/AButtonClients.gif');return true" href="OC1.html"><img id="AButtonClients" src="/images/AButtonClients.gif" alt="" name="AButtonClients" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonClients','','/images/ButtonClients.jpg')" onmouseout="MM_swapImgRestore('AButtonClients','/images/AButtonClients.gif')" href="OC1.html"><img id="AButtonClients" src="/images/AButtonClients.gif" alt="" name="AButtonClients" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="107">
 					<div align="center">
-						<a onmouseover="changeImages('AButtonContact','/images/ButtonContact.jpg');return true" onmouseout="changeImages('AButtonContact','/images/AButtonContact.gif');return true" href="CL.html"><img id="AButtonContact" src="/images/AButtonContact.gif" alt="" name="AButtonContact" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonContact','','/images/ButtonContact.jpg')" onmouseout="MM_swapImgRestore('AButtonContact','/images/AButtonContact.gif')" href="CL.html"><img id="AButtonContact" src="/images/AButtonContact.gif" alt="" name="AButtonContact" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="125">
 					<div align="center">
-						<a onmouseover="changeImages('AButtonHome','/images/ButtonHome.gif');return true" onmouseout="changeImages('AButtonHome','/images/AButtonHome.gif');return true" href="index.html"><img id="AButtonHome" src="/images/AButtonHome.gif" alt="" name="AButtonHome" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonHome','','/images/ButtonHome.gif')" onmouseout="MM_swapImgRestore('AButtonHome','/images/AButtonHome.gif')" href="index.html"><img id="AButtonHome" src="/images/AButtonHome.gif" alt="" name="AButtonHome" width="122" height="70" border="0" /></a></div>
 				</td>
 			</tr>
 			<tr>
